[tool.poetry]
name = "hello_bitcoin"
version = "0.1.0"
description = ""
authors = ["veto <veto@myridia.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pynacl = "^1.3.0"
structlog = "^20.1.0"
colorama = "^0.4.3"
marshmallow = "^3.6.0"
marshmallow-oneofschema = "^2.0.1"
aiohttp = "^3.6.2"
more-itertools = "^10.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
